--- a/impl/project_process_config.json
+++ b/impl/project_process_config.json
@@ -65,7 +65,7 @@
  "Show_All_Warnings" : false,
  "Synthesis On/Off Implemented as Translate On/Off" : false,
  "Synthesize_tool" : "GowinSyn",
- "TopModule" : "",
+ "TopModule" : "Cortex_M3_DualCam",
  "USERCODE" : "default",
  "Unused_Pin" : "As_input_tri_stated_with_pull_up",
  "Update_Compile_Point_Timing_Data" : false,
